--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,229 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+html {
+  box-sizing: border-box;
+}
+*,*::before,*:after {
+  box-sizing: inherit;
+}
+body {
+  background-color: #f2f2f2;
+  font-family: 'Open Sans', sans-serif;
+
+}
+/** Globales **/
+.contenedor {
+  width: 98%;
+  margin: 0 auto;
+}
+@media only screen and (min-width:480px) {
+  .contenedor {
+    width: 95%;
+    margin: 0 auto;
+  }
+}
+@media only screen and (min-width:768px) {
+  .contenedor {
+    width: 90%;
+  }
+}
+@media only screen and (min-width:992px) {
+  .contenedor {
+    width: 90%;
+    max-width: 1100px;
+
+  }
+}
+.seccion {
+  padding: 30px 0;
+}
+.seccion p {
+  font-size: 1.2em;
+  text-align: center;
+}
+h2 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 2.4em;
+  text-transform: uppercase;
+  text-align: center;
+}
+h2::after {
+  content: '';
+  margin: 0 auto;
+  background-image: url(../img/separador.png);
+  height: 30px;
+  width: 100px;
+  display: block;
+
+}
+/** Header **/
+div.hero  {
+  background-image: url(../img/encabezado.jpg);
+  height: 100vh;
+  background-position: top center;
+  background-size: cover;
+}
+div.contenido-header {
+  padding-top: 40px;
+}
+@media only screen and (min-width:768px) {
+  div.contenido-header {
+    padding-top: 10px;
+  }
+}
+nav.redes-sociales {
+  text-align: center;
+}
+nav.redes-sociales a {
+  color: #ffffff;
+  font-size: 2em;
+  margin-right: 20px;
+}
+nav.redes-sociales a:last-child {
+  margin-right: 0;
+}
+div.informacion-evento {
+  text-align: center;
+  color: #ffffff;
+}
+@media only screen and (min-width:768px) {
+  div.informacion-evento {
+    width: 70%;
+    margin: 0 auto;
+    margin-top: 50px;
+  }
+}
+div.informacion-evento p {
+  margin:0;
+  display: inline;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+div.informacion-evento p i {
+  color: #fe4918;
+  font-size: 2.4rem;
+  
+}
+p.fecha {
+  float: left;
+}
+p.ciudad {
+  float: right;
+  text-align: right;
+}
+p.slogan {
+  text-transform: none!important;
+}
+p.slogan span {
+  font-weight: bold;
+}
+h1.nombre-sitio {
+  font-size: 5.9vw;
+  text-transform: uppercase;
+  font-family: 'PT Sans', sans-serif;
+}
+@media only screen and (min-width:768px) {
+  h1.nombre-sitio {
+    font-size: 11.5vw;
+    margin: 0;
+    line-height: 1;
+  }
+}
+/** Barra **/
+div.barra{
+  background-color: #353535;
+  padding: 20px 0;
+}
+div.logo {
+  width: 80%;
+}
+div.logo img {
+  width: 100%;
+}
+@media only screen and (min-width:768px) {
+  div.logo {
+    width: 33%;
+    float: left;
+  }
+}
+/** Navegacion principal **/
+nav.navegacion-principal {
+  display: none;
+}
+nav.navegacion-principal a {
+  font-family: 'Oswald', sans-serif;
+  color: #ffffff;
+  font-size: 1.3rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  transition: all .6s ease;
+  width: 100%;
+  display: block;
+  text-align: center;
+  margin-bottom: 20px;
+}
+nav.navegacion-principal a:hover {
+  background-color: #fe4918;
+}
+nav.navegacion-principal a:last-child {
+  border: 2px solid  #fe4918;
+  color:  #fe4918;
+
+}
+nav.navegacion-principal a:last-child:hover {
+  color: #ffffff;
+}
+
+@media only screen and (min-width: 768px) {
+  nav.navegacion-principal {
+    width: 67%;
+    float: right;
+    text-align: right;
+    display: block;
+  }
+  nav.navegacion-principal a {
+    margin-right: 10px;
+    line-height: 10px 10px;
+    display: inline-block;
+    width: auto;
+    display: inline-block;
+    text-align: center;
+    margin: 0 10px 0 0;
+  }
+}
+
+/** Menu Movil **/
+div.menu-movil {
+  width: 60px;
+  display: block;
+  float: right;
+  text-align: right;
+  margin-top: 12px;
+
+}
+div.menu-movil:hover {
+  cursor: pointer;
+}
+div.menu-movil span {
+  height: 8px;
+  margin-bottom: 6px;
+  background-color: white;
+  display: block;
+}
+@media only screen and (min-width: 768px) {
+  div.menu-movil {
+    display: none;
+  
+  }
+}
+
+
+
+
+
+
+
 
 /* ==========================================================================
    Helper classes
