--- a/css/main.css
+++ b/css/main.css
@@ -153,6 +153,36 @@ h2::after {
   display: block;
 
 }
+h3 {
+  font-size: 1.8em;
+  color: #fe4918;
+  font-family: 'PT Sans', sans-serif;
+  margin: 0;
+}
+.button {
+  background-color: #fe4918;
+  padding: 10px 40px;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: 'Oswald', sans-serif;
+  text-decoration: none;
+  font-size: 1em;
+  margin-top: 10px;
+  display: inline-block;
+  transition: all .3s ease;
+}
+.button:hover {
+  background-color: #e33000;
+}
+.float-right {
+  float: right;
+}
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 /** Header **/
 div.hero  {
   background-image: url(../img/encabezado.jpg);
@@ -314,9 +344,116 @@ div.menu-movil span {
   }
 }
 
+/** Talleres **/
+section.programa {
+  position: relative;
 
+}
+div.contenedor-video {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 
+div.contenido-programa {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+div.programa-evento {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 15px;
+  margin-top: 80px;
+}
+@media only screen and (min-width: 768px) {
+  div.programa-evento {
+    width: 70%;
+  }
+}
+@media only screen and (min-width: 992px) {
+  div.programa-evento {
+    width: 50%;
+  }
+}
+nav.menu-programa{
+  width: 100%;
+  border-bottom: 1px solid  #fe4918;
+  padding-bottom: 10px;
+}
+@media only screen and (min-width: 768px) {
+  nav.menu-programa {
+    display: table;
+  }
+}
+nav.menu-programa a {
+  display: block;
+  text-align: center;
+  color: #000000;
+  text-decoration: none;
+  font-family: 'Oswald', sans-serif;
+  margin-bottom: 10px;
+  font-size: 1.2em;
+}
+@media only screen and (min-width: 768px) {
+  nav.menu-programa a {
+    display: table-cell;
+  }
+}
+nav.menu-programa a i, div.detalle-evento p i {
+  color: #fe4918;
+  font-size: 1.8em;
+  margin-right: 10px;
+}
+/** detalle evento **/
+div.detalle-evento {
+  margin-top: 20px;
+  border-bottom: 1px solid black;
+  padding: 0 20px;
+}
 
+div.detalle-evento:nth-child(2) {
+  border:none
+}
+div.detalle-evento p {
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+/**Invitados**/
+ul.lista-invitados li{
+  padding: 10px;
+  float: left;
+}
+@media only screen and (min-width:480px) {
+  ul.lista-invitados li{
+    width: 50%;
+  }
+}
+@media only screen and (min-width:768px) {
+  ul.lista-invitados li{
+    width: 33.3%;
+  }
+}
+div.invitado {
+  position:relative;
+  overflow:hidden;
+}
+div.invitado img {
+  max-width: 100%;
+}
+div.invitado p {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 15px 10px;
+  margin: 0;
+  background-color: rgba(0, 0, 0, .55);
+  width: 100%;
+  text-align: left;
+  font-family: 'Oswald', sans-serif;
+  color: #fe4918;
+  text-transform: uppercase;
+}
 
 
 
