--- a/css/main.css
+++ b/css/main.css
@@ -171,10 +171,24 @@ h3 {
   margin-top: 10px;
   display: inline-block;
   transition: all .3s ease;
+  border: 2px solid;
+}
+.button.hollow,
+.button.hollow:hover{
+  background-color: white;
+  color: #fe4918;
+}
+.button.transparente {
+  background-color: transparent;
+  border: 2px solid #ffffff;
+}
+.button.transparente:hover{
+  border: 2px solid #fe4918;
 }
 .button:hover {
   background-color: #e33000;
 }
+
 .float-right {
   float: right;
 }
@@ -440,6 +454,13 @@ div.invitado {
 }
 div.invitado img {
   max-width: 100%;
+  filter: gray;
+  -webkit-filter: grayscale(1);
+  -webkit-transition: all .5s ease-in-out;
+}
+div.invitado img:hover {
+  -webkit-filter: grayscale(0);
+  -webkit-transform: scale(1.1);
 }
 div.invitado p {
   position: absolute;
@@ -453,11 +474,221 @@ div.invitado p {
   font-family: 'Oswald', sans-serif;
   color: #fe4918;
   text-transform: uppercase;
+  -webkit-transition: all .5s ease-in-out;
+}
+
+/** Contadro **/
+.parallax::before {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+  -webkit-filter: brightness(.8);
+  filter: brightness(.8);
+}
+div.contador {
+  position: relative;
+  height: auto;
+}
+div.contador::before{
+  background-image: url(../img/bg-resumen.jpg);
+  content: '';
+}
+ul.resumen-evento {
+  position: relative;
+  padding: 120px 0px;
+}
+ul.resumen-evento li {
+  width: 50%;
+  float: left;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-family: 'Oswald', sans-serif;
+  font-size: 24px;
+}
+@media only screen and (min-width:768px){
+  ul.resumen-evento li {
+    width: 25%;
+  }
+}
+p.numero {
+  color:#fe4918;
+  font-size: 4em;
+  display: block;
+  margin: 0 0 10px 0;
+  font-family: 'Oswald', sans-serif;
+}
+
+/** Tabla de precios **/
+ul.lista-precios > li {
+  padding: 10px;
+}
+
+@media only screen and (min-width:768px){
+  ul.lista-precios > li {
+    float: left;
+    width: 33.3%;
+  }
+}
+div.tabla-precio {
+  border: 1px solid #e1e1e1;
+  background-color: #ffffff;
+  padding: 40px 0;
+  text-align: center;
+  transition: all .3s ease-in-out;
+}
+div.tabla-precio:hover{
+  transform: scale(1.1);
+  border: 1px solid #fe4918;
+  box-shadow: 8px 0px 50px #666;
+  
+}
+div.tabla-precio ul li {
+  font-family: 'PT Sans', sans-serif;
+  font-size: 14px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  color: #868686;
+  line-height: 26px;
+}
+div.tabla-precio ul li::before {
+  font-family: 'FontAwesome';
+  display: inline-block;
+  vertical-align: top;
+  padding: 0 5px;
+  font-size: 20px;
+  color: green;
+  -webkit-font-smoothing: antialiased;
+  content: '\f00c';
+}
+div.tabla-precio h3 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+div.tabla-precio p.numero {
+  color: #000000;
+  margin: 20px 0;
+}
+
+/** MAPA **/
+div.mapa {
+  height: 420px;
+  background-color: green ;
+}
+/** Testimoniales **/
+div.testimoniales {
+  display: flex;
+  padding-bottom: 20px;
+}
+div.testimonial {
+  padding:5px;
+}
+@media only screen and (min-width:768px){
+  div.testimonial {
+    float: left;
+    width: 33,3%;
+  }
+}
+blockquote {
+  background-color: white;
+  border: 1px solid #e1e1e1;
+  position: relative;
+  margin: 0 0 10px 0;
+  padding-bottom: 20px;
+}
+blockquote p {
+  text-align: left!important;
+  font-size: 1em!important;
+  font-family: 'PT Sans', sans-serif;
+  padding: 0 20px 0 65px;
+}
+blockquote p::before {
+  content: '\201c';
+  position: absolute;
+  left: 13px;
+  top: -6px;
+  font-size: 8em;
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+  color: #fe4918;
+
+}
+footer.info-testimonial {
+  padding: 0;
+}
+footer.info-testimonial img {
+  float: left;
+  width: 20%;
+  border-radius: 50%;
+  margin-left: 20px;
+}
+footer.info-testimonial cite {
+  text-align: left;
+  color: #fe4918;
+  text-transform: uppercase;
+  font-size: 12px;
+  padding-top: 20px;
+  width: 66.6%;
+  float: right;
+}
+footer.info-testimonial cite span {
+  color: #000000;
+  display: block;
+  text-transform: none;
+  margin-top: 10px;
+}
+
+/** newsletter **/
+div.newsletter {
+  position:relative;
+  height: auto;
+}
+div.newsletter::before {
+    background-image: url(../img/bg-newsletter.jpg);
+    content: '';
+}
+div.newsletter .contenido {
+  padding: 100px 0px;
+  color: #ffffff;
+  text-align: center;
+  position: relative;
+}
+
+div.newsletter .contenido p {
+  font-size: 1.2em;
+  text-transform: lowercase;
+}
+
+div.newsletter .contenido h3 {
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 7vw;
+  font-family: 'PT-Sans', 'sans';
 }
 
 
+/** Cuenta regresiva **/
+div.cuenta-regresiva ul li {
+  text-transform: uppercase;
+  font-family: 'Oswald', sans-serif;
+  font-size: 1.6em;
+  text-align: center;
+}
 
-
+@media only screen and (min-width:768px){
+  div.cuenta-regresiva ul li {
+   width: 25%;
+   float: left;
+  }
+}
 /* ==========================================================================
    Helper classes
    ========================================================================== */
