--- a/css/main.css
+++ b/css/main.css
@@ -623,6 +623,7 @@ blockquote p::before {
 }
 footer.info-testimonial {
   padding: 0;
+  background-color: transparent;
 }
 footer.info-testimonial img {
   float: left;
@@ -688,6 +689,115 @@ div.cuenta-regresiva ul li {
    width: 25%;
    float: left;
   }
+}
+
+/** Footer **/
+
+footer {
+  background-color: #353535;
+  padding-top: 40px;
+  margin-top: 20px;
+}
+footer .contenedor > div {
+  color: #ffffff;
+  padding: 0px 20px;
+  font-size: 12px;
+}
+@media only screen and (min-width:768px){
+  footer .contenedor > div {
+      width: 33.3%;
+      float: left;
+  }
+}
+
+footer h3 {
+  color: #ffffff;
+  text-transform: uppercase;
+  font-family: 'Oswald', sans-serif;
+  margin-bottom: 20px;
+}
+footer h3 span {
+  color: #fe4918;
+}
+footer .ultimos-tweets li {
+  margin-bottom: 10px;
+}
+footer nav.redes-sociales {
+  text-align: left;
+}
+p.copyright {
+  background-color: #2e2e2e;
+  color: #ffffff;
+  padding: 10px 0;
+  margin:20px 0 0 0;
+  text-align: center;
+}
+/** INTERNAS */
+/* Registro **/
+form.registro h3 {
+  text-align: center;
+  text-transform: uppercase;
+  margin: 20px 0 0;
+}
+form.registro label {
+  margin-bottom: bold;
+}
+h4 {
+  text-align: center;
+  text-transform: uppercase;
+  border-bottom: 2px solid #fe4918;
+  padding-bottom: 10;
+  font-size: 1.2em;
+}
+div.caja {
+  background-color: white;
+  border: 1px solid #e1e1e1;
+  padding: 10px;
+  margin: 10px;
+}
+div.campo {
+  padding: 20px;
+}
+@media only screen and (min-width: 768px){
+  div.campo {
+    float: left;
+    width: 33,3%;
+  }
+}
+div.paquetes .tabla-precio:hover {
+  transform: none;
+  box-shadow: none;
+
+}
+div.paquetes .tabla-precio input {
+  clear: both;
+  width: 100px;
+  margin: 10px 0 auto 0 auto;
+  display: block;
+}
+.contenido-dia{
+  padding: 20px;
+  /*display:none; */
+}
+@media only screen and (min-width: 768px){
+  .contenido-dia > div{
+    float: left;
+    width: 33.3%;
+  }
+}
+.contenido-dia > div p{
+  text-align: left;
+}
+.contenido-dia > div label{
+  display: block;
+  margin-bottom: 10px;
+}
+.contenido-dia > div input{
+  margin-right: 10px;
+}
+.contenido-dia > div label time{
+  color: #fe4918;
+  font-weight: bold;
 }
 /* ==========================================================================
    Helper classes
