--- a/css/main.css
+++ b/css/main.css
@@ -197,6 +197,46 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+/** Lettering **/
+h1.nombre-sitio span {
+  position: relative;
+  text-shadow: 0 0 30px black;
+}
+@media only screen and (min-width: 992px){
+  .char1 {
+    top: 20px; right: 20px;
+  }
+  .char2 {
+    top: 0px; left: -20px;
+  }
+  .char3 {
+    top: 10px; right: 20px;
+
+  }
+  .char4 {
+    top: 5px; left: 10px;
+  }
+  .char5 {
+    top: 15px; right: 10px;
+  }
+  .char6 {
+    top: 5px; left: 10px;
+  }
+  .char7 {
+    top: 20px; left: -10px;
+  }
+  .char8 {
+    top: 0; left: -10px;
+  }
+  .char9 {
+    top: 5px; right: 10px;
+  }
+  .char10 {
+    top: 20px; right: 20px;
+  }
+
+}
 /** Header **/
 div.hero  {
   background-image: url(../img/encabezado.jpg);
@@ -274,6 +314,13 @@ h1.nombre-sitio {
 div.barra{
   background-color: #353535;
   padding: 20px 0;
+}
+.fixed {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 2;
 }
 div.logo {
   width: 80%;
@@ -392,8 +439,8 @@ div.programa-evento {
 }
 nav.menu-programa{
   width: 100%;
-  border-bottom: 1px solid  #fe4918;
-  padding-bottom: 10px;
+ 
+  
 }
 @media only screen and (min-width: 768px) {
   nav.menu-programa {
@@ -408,6 +455,23 @@ nav.menu-programa a {
   font-family: 'Oswald', sans-serif;
   margin-bottom: 10px;
   font-size: 1.2em;
+  position: relative;
+  padding-bottom: 10px;
+  border-bottom: 1px solid  #fe4918;
+}
+nav.menu-programa a.activo::after {
+  position: absolute;
+  content: '';
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  height: 20px;
+  width: 30px;
+  background-image: url('../img/talleres-flecha.jpg');
+  background-position: top center;
+  background-repeat: no-repeat;
+  bottom: -20px;
 }
 @media only screen and (min-width: 768px) {
   nav.menu-programa a {
@@ -419,6 +483,7 @@ nav.menu-programa a i, div.detalle-evento p i {
   font-size: 1.8em;
   margin-right: 10px;
 }
+
 /** detalle evento **/
 div.detalle-evento {
   margin-top: 20px;
@@ -733,6 +798,15 @@ p.copyright {
   text-align: center;
 }
 /** INTERNAS */
+/* Conferencia **/
+body.conferencia .navegacion-principal .activo{
+  border-bottom: 2px solid #fe4918 ;
+}
+div.galeria {
+  display: inline-block;
+  margin-bottom: 5px;
+
+}
 /* Registro **/
 form.registro h3 {
   text-align: center;
