--- a/css/main.css
+++ b/css/main.css
@@ -337,6 +337,7 @@ div.logo img {
 /** Navegacion principal **/
 nav.navegacion-principal {
   display: none;
+  width: 100%;
 }
 nav.navegacion-principal a {
   font-family: 'Oswald', sans-serif;
