--- a/css/main.css
+++ b/css/main.css
@@ -800,7 +800,7 @@ p.copyright {
 }
 /** INTERNAS */
 /* Conferencia **/
-body.conferencia .navegacion-principal .activo{
+ .navegacion-principal .activo{
   border-bottom: 2px solid #fe4918 ;
 }
 div.galeria {
@@ -874,6 +874,58 @@ div.paquetes .tabla-precio input {
   color: #fe4918;
   font-weight: bold;
 }
+
+/* Calendario */
+div.calendario h3 {
+  background-color: #fe4918;
+  clear: both;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+}
+div.calendario::after {
+  clear: both;
+  display: block;
+  content: '';
+}
+div.dia {
+  width: 50%;
+  float: left;
+  border: 2px solid #e1e1e1;
+}
+
+@media only screen and (min-width: 768px) {
+  div.dia {
+    width: 33.3%;
+    min-height: 240px;
+    padding-top: 20px;
+  }
+}
+
+div.dia:hover {
+  background-color: #e1e1e1;
+  -webkit-transform: scale(1.1);
+}
+div.dia p.titulo {
+  color: #fe4918;
+  text-transform: uppercase;
+  font-weight: bold;
+
+}
+div.dia p {
+  font-size: 1em;
+}
+div.dia i {
+  color: #fe4918;
+  font-size: 1.6em;
+}
+
+/* Colorbox */
+div.boxElement {
+  padding: 30px!important;
+  text-align: center;
+}
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
