--- a/css/main.css
+++ b/css/main.css
@@ -875,6 +875,33 @@ div.paquetes .tabla-precio input {
   font-weight: bold;
 }
 
+/* Resumen Registro */
+div.resumen p {
+  font-size: 1.2em;
+  text-transform: uppercase;
+}
+div.resumen div.extras {
+  float: left;
+  width: 50%;
+  padding: 30px;
+}
+div.extras div.orden {
+  text-align: left;
+  margin-bottom: 10px;
+}
+div.extras div.orden input {
+  margin: 10px 0 0 0;
+}
+div.resumen div.total {
+  float: right;
+  width: 50%;
+  padding: 30px;
+}
+div.resumen input {
+  display: block;
+  margin: 10px auto;
+}
+
 /* Calendario */
 div.calendario h3 {
   background-color: #fe4918;
